--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
 
 <div class="countdown-section">
-    <h2>Countdown to 2025</h2>
+    <h2>Countdown to my 20th birthday</h2>
     <div class="countdown-container">
         <div class="countdown-item">
             <span id="countdown-days" class="countdown-number">0</span>
