--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@
 <!-- Version Panel Section (Add this just before your footer) -->
 <div class="version-info-section">
     <div class="version-header">Version Information</div>
-    <div class="version-number">v1.4.0-beta.2</div>
+    <div class="version-number">v1.4.0</div>
     <div class="build-number">Build: 2024.12.29</div>
     <div class="device-info">Device: Loading...</div>
-    <div class="update-time">Current Date and Time (UTC): Loading...</div>
+    <div class="update-time">Current Date and Time: Loading...</div>
     <div class="current-user">Current User's Login: BusArmyDude</div>
     <div class="countdown">Page refreshing in: 60 seconds</div>
 </div>
