--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
 <!-- Version Panel Section (Add this just before your footer) -->
 <div class="version-info-section">
     <div class="version-header">Version Information</div>
-    <div class="version-number">v1.4.0</div>
-    <div class="build-number">Build: 2024.12.29</div>
+    <div class="version-number">Version: v1.4.0</div>
+    <div class="build-number">Build: 2025.01.01</div>
     <div class="device-info">Device: Loading...</div>
     <div class="update-time">Current Date and Time: Loading...</div>
     <div class="current-user">Current User's Login: BusArmyDude</div>
