--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
     <div class="theme-toggle"></div>
 </label>
 
+<div id="textSizeControl">
+    <button id="increaseText">A+</button>
+    <button id="decreaseText">A-</button>
+</div>
+
+    
     <div class="container">
         <!-- Profile Section -->
         <div class="profile-section section">
