--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <div class="theme-toggle"></div>
 </label>
 
+<!-- Text Size Toggle -->
 <div id="textSizeControl">
     <button id="increaseText">A+</button>
     <button id="decreaseText">A-</button>
