--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
     <input type="checkbox" id="themeToggle">
     <div class="theme-toggle"></div>
 </label>
-    
+
+    <!-- Navigation -->
+    <nav>
+    <a href="index.html">Home</a> | 
+    <a href="settings.html">Settings</a>
+</nav>
+
     <div class="container">
         <!-- Profile Section -->
         <div class="profile-section section">
