--- a/settings.html
+++ b/settings.html
@@ -18,12 +18,11 @@
    <!-- Settings Page Structure -->
 
 <!-- Appearance Section -->
-<section id="appearance-section">
-    <h2>Appearance</h2>
-    <!-- Light/Dark Mode Toggle -->
-    <label for="theme-toggle">Toggle Light/Dark Mode:</label>
-    <input type="checkbox" id="theme-toggle-btn">
-</section>
+    <section id="appearance-section">
+        <h2>Appearance</h2>
+        <label for="theme-toggle-btn">Toggle Light/Dark Mode:</label>
+        <input type="checkbox" id="theme-toggle-btn"> <!-- Toggle Switch for Light/Dark Mode -->
+    </section>
 
 <!-- Accessibility Section -->
 <section id="accessibility-section">
