--- a/settings.html
+++ b/settings.html
@@ -18,11 +18,13 @@
    <!-- Settings Page Structure -->
 
 <!-- Appearance Section -->
-    <section id="appearance-section">
-        <h2>Appearance</h2>
-        <label for="theme-toggle-btn">Toggle Light/Dark Mode:</label>
-        <input type="checkbox" id="theme-toggle-btn"> <!-- Toggle Switch for Light/Dark Mode -->
-    </section>
+    <div class="settings-section">
+    <h2>Appearance</h2>
+    <label for="theme-toggle-btn">
+        <input type="checkbox" id="theme-toggle-btn">
+        <span id="mode-label">Light Mode</span>
+    </label>
+</div>
 
 <!-- Accessibility Section -->
 <section id="accessibility-section">
