--- a/settings.html
+++ b/settings.html
@@ -7,6 +7,13 @@
     <title>Settings</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS -->
 </head>
+
+    <!-- Navigation -->
+    <nav>
+    <a href="index.html">Home</a> | 
+    <a href="settings.html">Settings</a>
+</nav>
+    
 <body>
     <div class="settings-page">
         <h1>Settings</h1>
