--- a/settings.html
+++ b/settings.html
@@ -31,10 +31,11 @@
     <meta name="msapplication-config" content="/browserconfig.xml">
 </head>
 
-    <!-- Navigation -->
-    <nav>
-    <a href="index.html">Home</a> | 
-    <a href="settings.html">Settings</a>
+   <nav class="navbar">
+  <ul>
+    <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+    <li><a href="settings.html"><i class="fas fa-cog"></i> Settings</a></li>
+  </ul>
 </nav>
     
 <body>
