--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
     <meta name="msapplication-TileImage" content="images/ms-icon-144x144.png">
     <meta name="msapplication-config" content="/browserconfig.xml">
     
-    <!-- Navigation -->
-    <nav>
-    <a href="index.html">Home</a> | 
-    <a href="settings.html">Settings</a>
+    <nav class="navbar">
+  <ul>
+    <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+    <li><a href="settings.html"><i class="fas fa-cog"></i> Settings</a></li>
+  </ul>
 </nav>
 
     <div class="container">
