--- a/index.html
+++ b/index.html
@@ -29,12 +29,15 @@
     <meta name="msapplication-TileImage" content="images/ms-icon-144x144.png">
     <meta name="msapplication-config" content="/browserconfig.xml">
     
-    <nav class="navbar">
-  <ul>
-    <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-    <li><a href="settings.html"><i class="fas fa-cog"></i> Settings</a></li>
-  </ul>
-</nav>
+    <header class="header">
+  <h1>LinkStream by BusArmy</h1>
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+      <li><a href="settings.html"><i class="fas fa-cog"></i> Settings</a></li>
+    </ul>
+  </nav>
+</header>
 
     <div class="container">
         <!-- Profile Section -->
