--- a/settings.html
+++ b/settings.html
@@ -31,12 +31,15 @@
     <meta name="msapplication-config" content="/browserconfig.xml">
 </head>
 
-   <nav class="navbar">
-  <ul>
-    <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-    <li><a href="settings.html"><i class="fas fa-cog"></i> Settings</a></li>
-  </ul>
-</nav>
+   <header class="header">
+  <h1>LinkStream by BusArmy</h1>
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+      <li><a href="settings.html"><i class="fas fa-cog"></i> Settings</a></li>
+    </ul>
+  </nav>
+</header>
     
 <body>
     <div class="settings-page">
