--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta name="msapplication-config" content="/browserconfig.xml">
     
     <header class="header">
-  <h1>LinkStream by BusArmy</h1>
+  <h1>LinkStream by Bus Army Dude</h1>
   <nav class="navbar">
     <ul>
       <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
