--- a/merch.html
+++ b/merch.html
@@ -12,8 +12,10 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="#new-products">New Products</a></li>
+                <li><a href="#on-sale">On Sale</a></li>
+                <li><a href="#categories">Categories</a></li>
                 <li><a href="settings.html">Settings</a></li>
-              <li><a href="merch.html">Merch Store</a></li>
             </ul>
         </nav>
     </header>
@@ -52,4 +54,21 @@
 
     <section id="categories">
         <h2>Product Categories</h2>
-    
+        <ul class="categories-list">
+            <li><a href="#">T-shirts</a></li>
+            <li><a href="#">Hats</a></li>
+            <li><a href="#">Accessories</a></li>
+            <li><a href="#">Stickers</a></li>
+            <!-- More categories -->
+        </ul>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Bus Army. All rights reserved.</p>
+    </footer>
+
+    <script src="merch.js"></script>
+    <script src="script.js"></script>
+    <script src="settings.js"></script>
+</body>
+</html>
