--- a/merch.html
+++ b/merch.html
@@ -12,10 +12,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#new-products">New Products</a></li>
-                <li><a href="#on-sale">On Sale</a></li>
-                <li><a href="#categories">Categories</a></li>
                 <li><a href="settings.html">Settings</a></li>
+                <li><a href="merch.html">Merch Store</a></li>
             </ul>
         </nav>
     </header>
