--- a/settings.html
+++ b/settings.html
@@ -33,8 +33,9 @@
 
    <nav class="navbar">
   <ul>
-    <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-    <li><a href="settings.html"><i class="fas fa-cog"></i> Settings</a></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="settings.html">Settings</a></li>
+    <li><a href="merch.html">Merch Store</a></li>
   </ul>
 </nav>
     
