--- a/merch.html
+++ b/merch.html
@@ -28,6 +28,7 @@
                     <h3>Product 1</h3>
                     <p>Product description goes here.</p>
                     <span>$29.99</span>
+                    <a href="https://example.com/buy-product1" class="buy-btn">Buy Now</a>
                 </div>
             </div>
             <!-- More products -->
@@ -44,6 +45,7 @@
                     <h3>Sale Product 1</h3>
                     <p>Description of the sale product.</p>
                     <span class="discount">$19.99</span>
+                    <a href="https://example.com/buy-sale1" class="buy-btn">Buy Now</a>
                 </div>
             </div>
             <!-- More sale products -->
