--- a/merch.html
+++ b/merch.html
@@ -78,11 +78,11 @@
     <section id="categories">
         <h2>Product Categories</h2>
         <ul class="categories-list">
-            <li><a href="#">T-shirts</a></li>
-            <li><a href="#">Hats</a></li>
-            <li><a href="#">Accessories</a></li>
-            <li><a href="#">Stickers</a></li>
-            <!-- More categories -->
+            <li><a href="#" class="category-link">All</a></li>
+            <li><a href="#" class="category-link">T-shirts</a></li>
+            <li><a href="#" class="category-link">Hats</a></li>
+            <li><a href="#" class="category-link">Accessories</a></li>
+            <li><a href="#" class="category-link">Stickers</a></li>
         </ul>
     </section>
 
