--- a/merch.html
+++ b/merch.html
@@ -50,12 +50,12 @@
     <section id="product-categories">
         <h2>Product Categories</h2>
         <ul class="categories-list">
-            <li><a href="#all-products" class="category-link">All Products</a></li>
-            <li><a href="#home&living" class="category-link">Home & Living</a></li>
-            <li><a href="#men" class="category-link">Men</a></li>
-            <li><a href="#women" class="category-link">Women</a></li>
-            <li><a href="#kids" class="category-link">Kids</a></li>
-            <li><a href="#accessories" class="category-link">Accessories</a></li>
+            <li><a href="#" class="category-link">All Products</a></li>
+            <li><a href="#" class="category-link">Home & Living</a></li>
+            <li><a href="#" class="category-link">Men</a></li>
+            <li><a href="#" class="category-link">Women</a></li>
+            <li><a href="#" class="category-link">Kids</a></li>
+            <li><a href="#" class="category-link">Accessories</a></li>
         </ul>
     </section>
 
