--- a/merch.html
+++ b/merch.html
@@ -48,16 +48,21 @@
     </section>
 
     <section id="product-categories">
-        <h2>Product Categories</h2>
-        <ul class="categories-list">
-            <li><a href="#" class="category-link">All Products</a></li>
-            <li><a href="#" class="category-link">Home & Living</a></li>
-            <li><a href="#" class="category-link">Men</a></li>
-            <li><a href="#" class="category-link">Women</a></li>
-            <li><a href="#" class="category-link">Kids</a></li>
-            <li><a href="#" class="category-link">Accessories</a></li>
-        </ul>
-    </section>
+    <h2>Product Categories</h2>
+    <ul class="categories-list">
+        <li><a href="#" class="category-link">All Products</a></li>
+        <li><a href="#" class="category-link">Home & Living</a></li>
+        <li><a href="#" class="category-link">Men</a></li>
+        <li><a href="#" class="category-link">Women</a></li>
+        <li><a href="#" class="category-link">Kids</a></li>
+        <li><a href="#" class="category-link">Accessories</a></li>
+    </ul>
+</section>
+
+<div class="product-grid">
+    <!-- Product Cards will be added dynamically here -->
+</div>
+
 
     <section id="new-products">
         <h2>New Products</h2>
