--- a/merch.html
+++ b/merch.html
@@ -40,14 +40,7 @@
         </nav>
     </header>
 
-    <section id="on-sale">
-        <h2>On Sale</h2>
-        <div class="product-grid sale-grid">
-            <!-- On Sale products will be added dynamically here -->
-        </div>
-    </section>
-
-    <section id="product-categories">
+<section id="product-categories">
     <h2>Product Categories</h2>
     <ul class="categories-list">
         <li><a href="#" class="category-link">All Products</a></li>
@@ -60,15 +53,14 @@
 </section>
 
 <div class="product-grid">
-    <!-- Product Cards will be added dynamically here -->
+    <h2>On Sale</h2>
+    <div class="sale-grid"></div>
 </div>
 
-
-    <section id="new-products">
-        <h2>New Products</h2>
-        <div class="product-grid new-product-grid">
-            <!-- New products will be added dynamically here -->
-        </div>
+<div class="product-grid">
+    <h2>Products</h2>
+    <div class="products-grid"></div>
+</div>
     </section>
 
     <script src="merch.js"></script>
