--- a/merch.html
+++ b/merch.html
@@ -52,16 +52,17 @@
     </ul>
 </section>
 
+<!-- Section for On Sale Products -->
 <div class="product-grid">
     <h2>On Sale</h2>
-    <div class="sale-grid"></div>
+    <div class="sale-grid"></div> <!-- On Sale products will be added here -->
 </div>
 
+<!-- Section for Products -->
 <div class="product-grid">
     <h2>Products</h2>
-    <div class="products-grid"></div>
+    <div class="products-grid"></div> <!-- Products will be added here -->
 </div>
-    </section>
 
     <script src="merch.js"></script>
     <script src="script.js"></script>
