--- a/merch.html
+++ b/merch.html
@@ -55,14 +55,19 @@
 <!-- Section for On Sale Products -->
 <div class="product-grid">
     <h2>On Sale</h2>
-    <div class="sale-grid"></div> <!-- On Sale products will be added here -->
+    <div class="sale-grid">
+        <!-- On Sale Products will go here -->
+    </div>
 </div>
 
 <!-- Section for Products -->
 <div class="product-grid">
     <h2>Products</h2>
-    <div class="products-grid"></div> <!-- Products will be added here -->
+    <div class="products-grid">
+        <!-- Regular Products will go here -->
+    </div>
 </div>
+
 
     <script src="merch.js"></script>
     <script src="script.js"></script>
