--- a/merch.html
+++ b/merch.html
@@ -43,30 +43,31 @@
 <section id="product-categories">
     <h2>Product Categories</h2>
     <ul class="categories-list">
-        <li><a href="#" class="category-link">All Products</a></li>
-        <li><a href="#" class="category-link">Home & Living</a></li>
-        <li><a href="#" class="category-link">Men</a></li>
-        <li><a href="#" class="category-link">Women</a></li>
-        <li><a href="#" class="category-link">Kids</a></li>
-        <li><a href="#" class="category-link">Accessories</a></li>
-    </ul>
+    <li><a href="#">All Products</a></li>
+    <li><a href="#">Accessories</a></li>
+    <li><a href="#">Home & Living</a></li>
+    <li><a href="#">Men</a></li>
+    <li><a href="#">Women</a></li>
+    <li><a href="#">Kids</a></li>
+    <!-- Add other categories as necessary -->
+</ul>
 </section>
 
-<!-- Section for On Sale Products -->
-<div class="product-grid">
+<!-- On Sale Section -->
+<section class="product-grid" id="on-sale">
     <h2>On Sale</h2>
-    <div class="sale-grid">
-        <!-- On Sale Products will go here -->
+    <div class="product-cards-container" id="on-sale-products">
+        <!-- On Sale Products will be inserted here by JavaScript -->
     </div>
-</div>
+</section>
 
-<!-- Section for Products -->
-<div class="product-grid">
+<!-- Products Section -->
+<section class="product-grid" id="products">
     <h2>Products</h2>
-    <div class="products-grid">
-        <!-- Regular Products will go here -->
+    <div class="product-cards-container" id="all-products">
+        <!-- All Products will be inserted here by JavaScript -->
     </div>
-</div>
+</section>
 
 
     <script src="merch.js"></script>
