--- a/merch.html
+++ b/merch.html
@@ -30,6 +30,14 @@
     <meta name="msapplication-TileImage" content="images/ms-icon-144x144.png">
     <meta name="msapplication-config" content="/browserconfig.xml">
 
+<nav class="navbar">
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="settings.html">Settings</a></li>
+    <li><a href="merch.html">Merch Store</a></li>
+  </ul>
+</nav>
+    
 </head>
 <body>
     <header>
