--- a/merch.html
+++ b/merch.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Merch Store</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="merch.css">
     <script src="script.js" defer></script>
     <meta http-equiv="refresh" content="60">
     <!-- Favicons and Icons -->
