--- a/merch.html
+++ b/merch.html
@@ -66,7 +66,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Merch Store. All Rights Reserved.</p>
+        <p>&copy; 2025 Bus Army Dude. All rights reserved.</p>
     </footer>
 
     <noscript>
