--- a/merch.html
+++ b/merch.html
@@ -45,16 +45,13 @@
 <body>
     <header>
         <h1>Welcome to the Merch Store</h1>
-        <nav>
-            <ul class="categories-list">
-                <li><a href="#" class="category">All Products</a></li>
-                <li><a href="#" class="category">Home & Living</a></li>
-                <li><a href="#" class="category">Men</a></li>
-                <li><a href="#" class="category">Accessories</a></li>
-                <li><a href="#" class="category">Women</a></li>
-                <li><a href="#" class="category">Kids</a></li>
-                <li><a href="#" class="category">On Sale</a></li>
-            </ul>
+          <!-- Updated HTML for category dropdown -->
+            <div class="category-dropdown">
+                <select id="categorySelect">
+                    <option value="all">All Categories</option>
+                    <!-- Categories will be populated dynamically -->
+                </select>
+            </div>
         </nav>
     </header>
 
