--- a/merch.html
+++ b/merch.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark-mode"> <!-- Default dark mode applied -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Merch Store</title>
+    <title>Merch Store - Bus Army Dude's Profile</title>
     <link rel="stylesheet" href="merch.css">
     <script src="script.js" defer></script>
     <meta http-equiv="refresh" content="60">
+
     <!-- Favicons and Icons -->
     <link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="images/apple-icon-60x60.png">
@@ -29,41 +30,45 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="images/ms-icon-144x144.png">
     <meta name="msapplication-config" content="/browserconfig.xml">
-
-
-    <header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="merch.html">Merch Store</a></li>
-        </ul>
-    </nav>
-</header>
-    
 </head>
+
 <body>
+    <!-- Header & Navigation Bar -->
     <header>
-        <h1>Welcome to the Merch Store</h1>
-          <!-- Updated HTML for category dropdown -->
-            <div class="category-dropdown">
-                <select id="categorySelect">
-                    <option value="all">All Categories</option>
-                    <!-- Categories will be populated dynamically -->
-                </select>
-            </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="merch.html">Merch Store</a></li>
+            </ul>
         </nav>
+        <h1>Welcome to the Merch Store</h1>
+
+        <!-- Category Dropdown (will be populated dynamically) -->
+        <div class="category-dropdown">
+            <select id="categorySelect">
+                <option value="all">All Categories</option>
+                <!-- Categories will be populated dynamically -->
+            </select>
+        </div>
     </header>
 
+    <!-- Products Section -->
     <section>
         <h2>Products</h2>
-        <div class="products-grid"></div>
+        <div class="products-grid" id="products-grid">
+            <!-- Products will be dynamically added here -->
+        </div>
     </section>
 
+    <!-- On Sale Section -->
     <section>
         <h2>On Sale</h2>
-        <div class="sale-grid"></div>
+        <div class="sale-grid" id="sale-grid">
+            <!-- Sale products will be dynamically added here -->
+        </div>
     </section>
 
+    <!-- Footer -->
     <footer>
         <p>&copy; 2025 Bus Army Dude. All rights reserved.</p>
     </footer>
@@ -71,6 +76,8 @@
     <noscript>
         <p>Please enable JavaScript to view the website properly.</p>
     </noscript>
+
+    <!-- Include JavaScript for dynamic content -->
     <script src="merch.js"></script>
 </body>
 </html>
