--- a/merch.html
+++ b/merch.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Merch Store - Bus Army Dude's Profile</title>
+    <title>Merch Store</title>
     <link rel="stylesheet" href="merch.css">
     <script src="script.js" defer></script>
     <meta http-equiv="refresh" content="60">
@@ -47,7 +47,7 @@
         <div class="category-dropdown">
             <select id="categorySelect">
                 <option value="all">All Categories</option>
-                <!-- Categories will be populated dynamically -->
+                <!-- Categories will be populated dynamically by JavaScript -->
             </select>
         </div>
     </header>
