--- a/merch.html
+++ b/merch.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Merch Store - Bus Army Dude's Profile</title>
+    <title>Merch Store</title>
     <link rel="stylesheet" href="merch.css">
-    <script src="script.js" defer></script>
+    <script src="merch.js" defer></script>
     <meta http-equiv="refresh" content="60">
     <!-- Favicons and Icons -->
     <link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
@@ -29,37 +29,32 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="images/ms-icon-144x144.png">
     <meta name="msapplication-config" content="/browserconfig.xml">
+
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="navbar">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="merch.html">Merch Store</a></li>
             </ul>
         </nav>
+        <div class="category-dropdown">
+            <select id="categorySelect">
+                <!-- Categories will be populated dynamically -->
+            </select>
+        </div>
     </header>
 
-    <main>
-        <header>
-            <h1>Welcome to the Merch Store</h1>
-            <div class="category-dropdown">
-                <select id="categorySelect">
-                    <option value="all">All Categories</option>
-                </select>
-            </div>
-        </header>
+    <section>
+        <h2>Products</h2>
+        <div class="products-grid"></div>
+    </section>
 
-        <section class="products-section">
-            <h2>Products</h2>
-            <div class="products-grid"></div>
-        </section>
-
-        <section class="sale-section">
-            <h2>On Sale</h2>
-            <div class="sale-grid"></div>
-        </section>
-    </main>
+    <section>
+        <h2>On Sale</h2>
+        <div class="sale-grid"></div>
+    </section>
 
     <footer>
         <p>&copy; 2025 Bus Army Dude. All rights reserved.</p>
@@ -68,7 +63,5 @@
     <noscript>
         <p>Please enable JavaScript to view the website properly.</p>
     </noscript>
-
-    <script src="merch.js"></script>
 </body>
 </html>
